# NRW-Cup-Manager

./: CMakeLists.txt  README.md  enter_race_result.c  evaluate_race_result.c  export_evaluation.c
